fix responsiveness on mobile devices

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -164,3 +164,7 @@ a {
 #auditHistoryPanel {
   margin-top: 20px;
 }
+
+.table-responsive{
+  margin-top: 15px;
+}
